force-app/main/default/objects/IDStep__c/IDStep__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>ID - Step</label>
</CustomObject>