force-app/main/default/objects/IDStep__c/fields/ID_RecordType_Action_Plan_Supply_Chain__c.field-meta.xml
<CustomField>
    <fullName>ID_RecordType_Action_Plan_Supply_Chain__c</fullName>
    <label>ID RecordType Action Plan Supply Chain</label>
    <length>18</length>
    <type>Text</type>
</CustomField>