force-app/main/default/objects/IDStep__c/fields/Id_RecordType_Action_Plan_Validation__c.field-meta.xml
<CustomField>
    <fullName>Id_RecordType_Action_Plan_Validation__c</fullName>
    <label>Id RecordType Action Plan Validation</label>
    <length>18</length>
    <type>Text</type>
</CustomField>