force-app/main/default/objects/IDStep__c/fields/Id_RecordType_Approval_Flow__c.field-meta.xml
<CustomField>
    <fullName>Id_RecordType_Approval_Flow__c</fullName>
    <label>Id RecordType Approval Flow</label>
    <length>18</length>
    <type>Text</type>
</CustomField>