force-app/main/default/objects/IDStep__c/fields/Id_RecordType_Audit_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Id_RecordType_Audit_Schedule__c</fullName>
    <label>Id RecordType Audit Schedule</label>
    <length>18</length>
    <type>Text</type>
</CustomField>