force-app/main/default/objects/IDStep__c/fields/Id_RecordType_BM_Step_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Id_RecordType_BM_Step_Supplier__c</fullName>
    <label>Id RecordType BM Step Supplier</label>
    <length>18</length>
    <type>Text</type>
</CustomField>