force-app/main/default/objects/IDStep__c/fields/Id_RecordType_Compliance_Initial_Validat__c.field-meta.xml
<CustomField>
    <fullName>Id_RecordType_Compliance_Initial_Validat__c</fullName>
    <label>Id RecordType Compliance Initial Validat</label>
    <length>18</length>
    <type>Text</type>
</CustomField>