force-app/main/default/objects/IDStep__c/fields/Id_RecordType_Compliance_Step_2__c.field-meta.xml
<CustomField>
    <fullName>Id_RecordType_Compliance_Step_2__c</fullName>
    <label>Id RecordType Compliance - Step 2</label>
    <length>18</length>
    <type>Text</type>
</CustomField>