force-app/main/default/objects/IDStep__c/fields/Id_RecordType_Contract_Progress__c.field-meta.xml
<CustomField>
    <fullName>Id_RecordType_Contract_Progress__c</fullName>
    <label>Id RecordType Contract Progress</label>
    <length>18</length>
    <type>Text</type>
</CustomField>