force-app/main/default/objects/IDStep__c/fields/Id_RecordType_Contract_Registration__c.field-meta.xml
<CustomField>
    <fullName>Id_RecordType_Contract_Registration__c</fullName>
    <label>Id RecordType Contract Registration</label>
    <length>18</length>
    <type>Text</type>
</CustomField>