force-app/main/default/objects/IDStep__c/fields/Id_RecordType_Date_Availability__c.field-meta.xml
<CustomField>
    <fullName>Id_RecordType_Date_Availability__c</fullName>
    <label>Id RecordType Date Availability</label>
    <length>18</length>
    <type>Text</type>
</CustomField>