force-app/main/default/objects/IDStep__c/fields/Id_RecordType_Docs_Validation_VV__c.field-meta.xml
<CustomField>
    <fullName>Id_RecordType_Docs_Validation_VV__c</fullName>
    <label>Id RecordType Docs Validation (VV)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>