force-app/main/default/objects/IDStep__c/fields/Id_RecordType_Emergency_Approval__c.field-meta.xml
<CustomField>
    <fullName>Id_RecordType_Emergency_Approval__c</fullName>
    <label>Id RecordType Emergency Approval</label>
    <length>18</length>
    <type>Text</type>
</CustomField>