force-app/main/default/objects/IDStep__c/fields/Id_RecordType_Enable_Customer_User__c.field-meta.xml
<CustomField>
    <fullName>Id_RecordType_Enable_Customer_User__c</fullName>
    <label>Id RecordType Enable Customer User</label>
    <length>18</length>
    <type>Text</type>
</CustomField>