force-app/main/default/objects/IDStep__c/fields/Id_RecordType_Engineering__c.field-meta.xml
<CustomField>
    <fullName>Id_RecordType_Engineering__c</fullName>
    <label>Id RecordType Engineering</label>
    <length>18</length>
    <type>Text</type>
</CustomField>