force-app/main/default/objects/IDStep__c/fields/Id_RecordType_Evidence_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Id_RecordType_Evidence_Analysis__c</fullName>
    <label>Id RecordType Evidence Analysis</label>
    <length>18</length>
    <type>Text</type>
</CustomField>