force-app/main/default/objects/IDStep__c/fields/Id_RecordType_Finance_Step_1__c.field-meta.xml
<CustomField>
    <fullName>Id_RecordType_Finance_Step_1__c</fullName>
    <label>Id RecordType Finance - Step 1</label>
    <length>18</length>
    <type>Text</type>
</CustomField>