force-app/main/default/objects/IDStep__c/fields/Id_RecordType_Get_Clarifications__c.field-meta.xml
<CustomField>
    <fullName>Id_RecordType_Get_Clarifications__c</fullName>
    <label>Id RecordType Get Clarifications</label>
    <length>18</length>
    <type>Text</type>
</CustomField>