force-app/main/default/objects/IDStep__c/fields/Id_RecordType_GM_SC_FIN_CON__c.field-meta.xml
<CustomField>
    <fullName>Id_RecordType_GM_SC_FIN_CON__c</fullName>
    <label>Id RecordType GM SC, FIN, CON</label>
    <length>18</length>
    <type>Text</type>
</CustomField>