force-app/main/default/objects/IDStep__c/fields/Id_RecordType_HSEQ_EPCI_or_Operation__c.field-meta.xml
<CustomField>
    <fullName>Id_RecordType_HSEQ_EPCI_or_Operation__c</fullName>
    <label>Id RecordType HSEQ (EPCI or Operation)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>