force-app/main/default/objects/IDStep__c/fields/Id_RecordType_HSEQ_Senegal__c.field-meta.xml
<CustomField>
    <fullName>Id_RecordType_HSEQ_Senegal__c</fullName>
    <label>Id RecordType HSEQ Senegal</label>
    <length>18</length>
    <type>Text</type>
</CustomField>