force-app/main/default/objects/IDStep__c/fields/Id_RecordType_Inspection_Definition__c.field-meta.xml
<CustomField>
    <fullName>Id_RecordType_Inspection_Definition__c</fullName>
    <label>Id RecordType Inspection Definition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>