force-app/main/default/objects/IDStep__c/fields/Id_RecordType_Nonconformity_Evidence__c.field-meta.xml
<CustomField>
    <fullName>Id_RecordType_Nonconformity_Evidence__c</fullName>
    <label>Id RecordType Nonconformity Evidence</label>
    <length>18</length>
    <type>Text</type>
</CustomField>