force-app/main/default/objects/IDStep__c/fields/Id_RecordType_Perform_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Id_RecordType_Perform_Inspection__c</fullName>
    <label>Id RecordType Perform Inspection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>