force-app/main/default/objects/IDStep__c/fields/Id_RecordType_Procurement_Manager__c.field-meta.xml
<CustomField>
    <fullName>Id_RecordType_Procurement_Manager__c</fullName>
    <label>Id RecordType Procurement Manager</label>
    <length>18</length>
    <type>Text</type>
</CustomField>