force-app/main/default/objects/IDStep__c/fields/Id_RecordType_Quality__c.field-meta.xml
<CustomField>
    <fullName>Id_RecordType_Quality__c</fullName>
    <label>Id RecordType Quality</label>
    <length>18</length>
    <type>Text</type>
</CustomField>