force-app/main/default/objects/IDStep__c/fields/Id_RecordType_Quality_Receipt_Ins_Result__c.field-meta.xml
<CustomField>
    <fullName>Id_RecordType_Quality_Receipt_Ins_Result__c</fullName>
    <label>Id RecordType Quality Receipt Ins Result</label>
    <length>18</length>
    <type>Text</type>
</CustomField>