force-app/main/default/objects/IDStep__c/fields/Id_RecordType_Step_BM_NF__c.field-meta.xml
<CustomField>
    <fullName>Id_RecordType_Step_BM_NF__c</fullName>
    <label>Id RecordType Step BM-NF</label>
    <length>18</length>
    <type>Text</type>
</CustomField>