force-app/main/default/objects/IDStep__c/fields/Id_RecordType_Step_Inspection_Supplier_R__c.field-meta.xml
<CustomField>
    <fullName>Id_RecordType_Step_Inspection_Supplier_R__c</fullName>
    <label>Id RecordType Step Inspection Supplier R</label>
    <length>18</length>
    <type>Text</type>
</CustomField>