force-app/main/default/objects/IDStep__c/fields/Id_RecordType_Step_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Id_RecordType_Step_Meeting__c</fullName>
    <label>Id RecordType Step Meeting</label>
    <length>18</length>
    <type>Text</type>
</CustomField>