force-app/main/default/objects/IDStep__c/fields/Id_RecordType_Step_Modec_Logistic__c.field-meta.xml
<CustomField>
    <fullName>Id_RecordType_Step_Modec_Logistic__c</fullName>
    <label>Id RecordType Step Modec Logistic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>