force-app/main/default/objects/IDStep__c/fields/Id_RecordType_Vetting_Final_Check__c.field-meta.xml
<CustomField>
    <fullName>Id_RecordType_Vetting_Final_Check__c</fullName>
    <label>Id RecordType Vetting Final Check</label>
    <length>18</length>
    <type>Text</type>
</CustomField>