force-app/main/default/objects/IDStep__c/fields/Id_RecordType_VV_Audit_Information__c.field-meta.xml
<CustomField>
    <fullName>Id_RecordType_VV_Audit_Information__c</fullName>
    <label>Id RecordType VV Audit Information</label>
    <length>18</length>
    <type>Text</type>
</CustomField>