force-app/main/default/objects/IDStep__c/fields/Id_RecordType_VV_Team__c.field-meta.xml
<CustomField>
    <fullName>Id_RecordType_VV_Team__c</fullName>
    <label>Id RecordType VV Team</label>
    <length>18</length>
    <type>Text</type>
</CustomField>