force-app/main/default/objects/IDStep__c/fields/Id_RecordType_VVW_Attachment__c.field-meta.xml
<CustomField>
    <fullName>Id_RecordType_VVW_Attachment__c</fullName>
    <label>Id RecordType VVW Attachment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>