force-app/main/default/objects/IDStep__c/fields/IdRecordTypeAcoesSeremTomadas__c.field-meta.xml
<CustomField>
    <fullName>IdRecordTypeAcoesSeremTomadas__c</fullName>
    <label>Id RecordType Ações a serem tomadas</label>
    <length>18</length>
    <type>Text</type>
</CustomField>