force-app/main/default/objects/IDStep__c/fields/IdRecordTypeEvidenciaIncidente__c.field-meta.xml
<CustomField>
    <fullName>IdRecordTypeEvidenciaIncidente__c</fullName>
    <label>Id RecordType Evidência do Incidente</label>
    <length>18</length>
    <type>Text</type>
</CustomField>