force-app/main/default/objects/IDStep__c/fields/IdRecordTypeValidacaoAcoesIncidente__c.field-meta.xml
<CustomField>
    <fullName>IdRecordTypeValidacaoAcoesIncidente__c</fullName>
    <label>Id RecordType Validação Ações Incidente</label>
    <length>18</length>
    <type>Text</type>
</CustomField>