force-app/main/default/objects/IDStep__c/fields/IdRTValidarEvidenciaIncidente__c.field-meta.xml
<CustomField>
    <fullName>IdRTValidarEvidenciaIncidente__c</fullName>
    <label>Id RT Validar Evidência Incidente</label>
    <length>18</length>
    <type>Text</type>
</CustomField>