force-app/main/default/objects/IDStep__c/fields/TW1_Id_RecordType_Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>TW1_Id_RecordType_Action_Plan__c</fullName>
    <label>Id RecordType Action Plan</label>
    <length>18</length>
    <type>Text</type>
</CustomField>