force-app/main/default/objects/IDStep__c/fields/TW1_Id_RecordType_Finzalization_vetting__c.field-meta.xml
<CustomField>
    <fullName>TW1_Id_RecordType_Finzalization_vetting__c</fullName>
    <label>Id RecordType Finzalization vetting</label>
    <length>18</length>
    <type>Text</type>
</CustomField>