force-app/main/default/objects/IDStep__c/fields/TW1_Id_RecordType_Legal_Team__c.field-meta.xml
<CustomField>
    <fullName>TW1_Id_RecordType_Legal_Team__c</fullName>
    <label>Id RecordType Legal Team</label>
    <length>18</length>
    <type>Text</type>
</CustomField>